<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/app_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true">

                <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:id="@+id/collapsing_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fitsSystemWindows="true"
                    android:background="@color/white"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="60dp"
                        android:elevation="0dp"
                        app:layout_collapseMode="none"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/favoriteHeading"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_marginHorizontal="15dp"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:text="@string/favorite_recipes"
                            app:drawableEndCompat="@drawable/ic_arrow_right"/>

                        <TextView
                            android:id="@+id/description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="15dp"
                            android:textColor="@color/gray70"
                            android:textSize="14sp"
                            android:visibility="gone"
                            android:text="@string/favorite_recipes_will_appear_here"/>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rvFavorite"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="5dp"
                            android:scrollbars="none"
                            android:overScrollMode="never"
                            android:scrollIndicators="none"
                            android:nestedScrollingEnabled="true"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:textColor="@color/black"
                            android:layout_marginHorizontal="15dp"
                            android:layout_marginTop="20dp"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:text="@string/daily_inspiration"/>

                    </LinearLayout>

                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        app:contentInsetStart="0dp"
                        android:background="@color/white"
                        app:layout_collapseMode="pin">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="15dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/search"
                                android:layout_width="0dp"
                                android:layout_height="40dp"
                                android:layout_marginEnd="10dp"
                                android:paddingStart="10dp"
                                android:paddingEnd="10dp"
                                android:hint="@string/search_recipe"
                                android:textStyle="italic"
                                android:gravity="center_vertical"
                                android:background="@drawable/bg_search"
                                android:layout_weight="1"
                                android:drawablePadding="10dp"
                                app:drawableStartCompat="@drawable/ic_search" />

                            <ImageView
                                android:id="@+id/favorite"
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:layout_gravity="center"
                                android:src="@drawable/ic_love_fill"/>

                        </LinearLayout>

                    </androidx.appcompat.widget.Toolbar>

                </com.google.android.material.appbar.CollapsingToolbarLayout>

            </com.google.android.material.appbar.AppBarLayout>

            <FrameLayout
                android:id="@+id/fragmentContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>