<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_arrow_left"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:src="@mipmap/logo" />

            <ImageView
                android:id="@+id/btnFavorite"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_love_fill"/>

            <ImageView
                android:id="@+id/btnShare"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_share"/>

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/ivCover"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:scaleType="centerCrop"
                        app:layout_constraintDimensionRatio="H, 16:9"
                        android:background="@color/soft_orange"
                        app:layout_constraintTop_toTopOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="15dp"
                    app:layout_constraintTop_toBottomOf="@id/ivCover"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="Recipe Title"/>

                <TextView
                    android:id="@+id/person"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawablePadding="5dp"
                    android:textColor="@color/gray70"
                    android:textSize="14sp"
                    android:layout_marginHorizontal="15dp"
                    app:layout_constraintTop_toBottomOf="@id/title"
                    app:layout_constraintStart_toStartOf="@id/title"
                    app:layout_constraintEnd_toEndOf="@id/title"
                    app:drawableStartCompat="@drawable/ic_tableware"
                    tools:text="2 person(s)"/>

                <TextView
                    android:id="@+id/servingTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:textColor="@color/gray70"
                    android:textSize="14sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginHorizontal="15dp"
                    app:layout_constraintTop_toBottomOf="@id/person"
                    app:layout_constraintStart_toStartOf="@id/person"
                    app:layout_constraintEnd_toEndOf="@id/person"
                    app:drawableStartCompat="@drawable/ic_clock"
                    tools:text="25 minute(s)"/>

                <TextView
                    android:id="@+id/creditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:textColor="@color/gray70"
                    android:textSize="14sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginHorizontal="15dp"
                    app:layout_constraintTop_toBottomOf="@id/servingTime"
                    app:layout_constraintStart_toStartOf="@id/person"
                    app:layout_constraintEnd_toEndOf="@id/person"
                    app:drawableStartCompat="@drawable/ic_credits"
                    tools:text="Lorem ipsum sir dolor amet"/>

                <TextView
                    android:id="@+id/ingredientTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/ingredient"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="15dp"
                    app:layout_constraintTop_toBottomOf="@id/summary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvIngredient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:scrollbars="none"
                    android:overScrollMode="never"
                    android:scrollIndicators="none"
                    android:nestedScrollingEnabled="false"
                    app:layout_constraintTop_toBottomOf="@id/ingredientTitle"/>

                <TextView
                    android:id="@+id/instructionTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/instruction"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rvIngredient" />

                <TextView
                    android:id="@+id/instruction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:text="@string/no_instruction"
                    android:layout_marginTop="5dp"
                    android:layout_marginHorizontal="15dp"
                    app:layout_constraintTop_toBottomOf="@id/instructionTitle"
                    app:layout_constraintStart_toStartOf="@id/title"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/detailInstruction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray60"
                    android:textSize="14sp"
                    android:layout_marginTop="2dp"
                    android:layout_marginHorizontal="15dp"
                    app:layout_constraintTop_toBottomOf="@id/instruction"
                    app:layout_constraintStart_toStartOf="@id/title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:text="Pasta with Garlic"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="10dp"
                    android:background="@color/soft_orange"/>

                <TextView
                    android:id="@+id/summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray60"
                    android:textSize="14sp"
                    android:layout_marginHorizontal="15dp"
                    app:layout_constraintTop_toBottomOf="@id/creditText"
                    app:layout_constraintStart_toStartOf="@id/title"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="Pasta with Garlic, Scallions, Cauliflower and Breadcrumbs might be a good recipe to expand your main course repertoire."/>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>